# RPC_module_B

./: CMakeLists.txt  README.md  package.xml  readme.md
launch/: b1.launch
scripts/: directKinematics.py  inverseKinematics.py
src/: move.cpp
srv/: directKinematics.srv  inverseKinematics.srv
urdf/: robot.urdf
